--- a/detail.html
+++ b/detail.html
@@ -164,14 +164,11 @@
         <!--大图区域-->
         <div class="exzoom_img_box">
           <ul class='exzoom_img_ul'>
-            <li><img src="./images/details/photos/img01.jpg"/></li>
-            <li><img src="./images/details/photos/img02.jpg"/></li>
-            <li><img src="./images/details/photos/img03.jpg"/></li>
-            <li><img src="./images/details/photos/img04.jpg"/></li>
-            <li><img src="./images/details/photos/img05.jpg"/></li>
-            <li><img src="./images/details/photos/img06.jpg"/></li>
-            <li><img src="./images/details/photos/img07.jpg"/></li>
-            <li><img src="./images/details/photos/img08.jpg"/></li>
+            <li><img src="http://img-new.boqiicdn.com/Data/Shop/0/14/1445/shoppicpath11540870855_y.jpg?imageView2/2/w/360/h/360/q/100/interlace/0"/></li>
+            <li><img src="http://img-new.boqiicdn.com/Data/Shop/0/14/1445/shoppicpath21536221602_y.jpg?imageView2/2/w/360/h/360/q/100/interlace/0"/></li>
+            <li><img src="http://img-new.boqiicdn.com/Data/Shop/0/14/1445/shoppicpath31536221602_y.jpg?imageView2/2/w/360/h/360/q/100/interlace/0"/></li>
+            <li><img src="http://img-new.boqiicdn.com/Data/Shop/0/14/1445/shoppicpath41536221603_y.jpg?imageView2/2/w/360/h/360/q/100/interlace/0"/></li>
+            <li><img src="http://img-new.boqiicdn.com/Data/Shop/0/14/1445/shoppicpath51536221603_y.jpg?imageView2/2/w/360/h/360/q/100/interlace/0"/></li>
           </ul>
         </div>
         <!--缩略图导航-->
@@ -186,7 +183,7 @@
       <!--放大镜的右边模块-->
       <div id="details_info">
         <div id="details_info_title">
-          23432
+          福来恩 犬猫灭蜱虫跳蚤喷剂250ml 猫狗体外驱虫药
         </div>
         <div id="details_info_price">
           <span>￥</span>12321.00
