--- a/register.html
+++ b/register.html
@@ -55,19 +55,23 @@
   <script type="text/javascript" src="http://v1.vuejs.org/js/vue.min.js"></script>
   <script type="text/javascript" src="http://unpkg.com/iview@1.0.1/dist/iview.min.js"></script>
 
+  <!--  引入头像上传的js-->
+  <script src="js/upload/jquery.js"></script>
+  <script src="js/upload/upload.js"></script>
+
+
+  <!--引入单选框和复选框的css和js-->
+  <link rel="stylesheet" href="css/radio_checkbox/minimal/purple.css">
+  <script src="js/radio_checkbox/icheck.js"></script>
+
+  <!--  引入toast的样式-->
+  <link rel="stylesheet" href="css/toast/toast.css">
+
 </head>
+
+
 <body>
-
-<!--<div id="log_header" class="container">-->
-<!--  <a href="index.html"><img src="images/img/header/logo.gif"/></a>-->
-<!--  <img src="images/img/log/enter(2)_03.png"/>-->
-<!--</div>-->
-
-
 <div id="log_header" class="container">
-<!--  <a href="index.html">-->
-<!--    <img src="images/img/header/logo.gif"/>-->
-<!--  </a>-->
   <img src="images/img/log/reg_center.png"/>
 </div>
 <hr>
@@ -76,18 +80,215 @@
   <div id="register_body_register">
     <label></label>
     <h3>欢迎注册</h3>
-    <span>|已有账号？现在去<a href="index.html">登陆</a></span><br>
-    <label>手机号：</label>
-    <input type="text" placeholder="建议常用手机号" id="register_phone">
-    <div id="phone_tip"></div>
-    <br>
+    <span>|已有账号？现在去<a href="index.html">登陆</a></span><br><br><br>
+
+    <label id="imgLabel">头像：</label>
+    <div id="headImg">
+    </div>
+    <script type="text/javascript">
+      let dragImgUpload = new DragImgUpload("#headImg", {
+        callback: function (files) {
+          //回调函数，可以传递给后台等等
+          let file = files[0];
+          console.log(file.name);
+        }
+      })
+    </script>
+    <div id=""></div>
+
+    <label>账号：</label>
+    <input type="text" placeholder="输入账号（账号唯一）" id="register_username">
+
+    <label>昵称：</label>
+    <input type="text" placeholder="输入昵称" id="register_nickname">
+
+
     <label>密码：</label>
     <input type="password" placeholder="输入密码" id="register_password">
-    <div id="register_password_tip"></div>
-    <br><label>确认密码：</label>
+
+
+    <label>确认密码：</label>
     <input type="password" id="register_password1" placeholder="再次确认密码">
-    <div id="register_password1_tip"></div>
+
+
+    <label>手机号码：</label>
+    <input type="text" id="register_phone" placeholder="输入手机号码">
+
+    <label>性别：</label>
+    <div id="wordStatuslist" style="padding:10px; font-size:14px; ">
+      <ul>
+        <li>
+          <div class="iradio_minimal-purple">
+            <input type="radio" name="iCheck" id="minimal-radio-nan">
+          </div>
+          <label for="minimal-radio-nan">男</label></li>
+        <li>
+          <div class="iradio_minimal-purple">
+            <input type="radio" name="iCheck" id="minimal-radio-nv" checked>
+          </div>
+          <label for="minimal-radio-nv">女</label></li>
+      </ul>
+    </div>
     <br>
+
+    <label>个人签名：</label><br>
+    <textarea id="register_signature"></textarea>
+
+    <label>工作状态：</label>
+    <div id="wordStatuslist1" style="padding:10px; font-size:14px; ">
+      <ul>
+        <li>
+          <div class="iradio_minimal-purple">
+            <input type="radio" name="iCheck" id="minimal-radio-wuye">
+          </div>
+          <label for="minimal-radio-wuye">无业</label></li>
+        <li>
+          <div class="iradio_minimal-purple">
+            <input type="radio" name="iCheck" id="minimal-radio-xuesheng" checked>
+          </div>
+          <label for="minimal-radio-xuesheng">学生</label></li>
+        <li>
+          <div class="iradio_minimal-purple">
+            <input type="radio" name="iCheck" id="minimal-radio-gongzuo">
+          </div>
+          <label for="minimal-radio-gongzuo">工作</label></li>
+        <li>
+          <div class="iradio_minimal-purple">
+            <input type="radio" name="iCheck" id="minimal-radio-tuixiu">
+          </div>
+          <label for="minimal-radio-tuixiu">退休</label></li>
+      </ul>
+    </div>
+
+    <label>职业：</label>
+    <input type="text" id="register_career" placeholder="输入职业">
+
+
+    <label>养宠经验：</label>
+    <div id="wordStatuslist2" style="padding:10px; font-size:14px; ">
+      <ul>
+        <li>
+          <div class="iradio_minimal-purple">
+            <input type="radio" name="iCheck" id="minimal-radio-youjingyan">
+          </div>
+          <label for="minimal-radio-youjingyan">有经验</label></li>
+        <li>
+          <div class="iradio_minimal-purple">
+            <input type="radio" name="iCheck" id="minimal-radio-wujingyan" checked>
+          </div>
+          <label for="minimal-radio-wujingyan">无经验</label></li>
+      </ul>
+    </div>
+    <br>
+
+
+    <label>婚姻状况：</label>
+    <div id="wordStatuslist3" style="padding:10px; font-size:14px; ">
+      <ul>
+        <li>
+          <div class="iradio_minimal-purple">
+            <input type="radio" name="iCheck" id="minimal-radio-danshen">
+          </div>
+          <label for="minimal-radio-danshen">单身</label></li>
+        <li>
+          <div class="iradio_minimal-purple">
+            <input type="radio" name="iCheck" id="minimal-radio-lianai" checked>
+          </div>
+          <label for="minimal-radio-lianai">恋爱</label></li>
+        <li>
+          <div class="iradio_minimal-purple">
+            <input type="radio" name="iCheck" id="minimal-radio-yihun" checked>
+          </div>
+          <label for="minimal-radio-yihun">已婚</label></li>
+      </ul>
+    </div>
+    <br>
+
+
+    <label>住房情况：</label>
+    <div id="wordStatuslist4" style="padding:10px; font-size:14px; ">
+      <ul>
+        <li>
+          <div class="iradio_minimal-purple">
+            <input type="radio" name="iCheck" id="minimal-radio-zizhufang">
+          </div>
+          <label for="minimal-radio-zizhufang">自住房</label></li>
+        <li>
+          <div class="iradio_minimal-purple">
+            <input type="radio" name="iCheck" id="minimal-radio-zhengzufang" checked>
+          </div>
+          <label for="minimal-radio-zhengzufang">整租房</label></li>
+        <li>
+          <div class="iradio_minimal-purple">
+            <input type="radio" name="iCheck" id="minimal-radio-hezu" checked>
+          </div>
+          <label for="minimal-radio-hezu">合租</label></li>
+      </ul>
+    </div>
+    <br>
+
+
+    <label>原住民：</label>
+    <div id="wordStatuslist5" style="padding:10px; font-size:14px; ">
+      <ul>
+        <li>
+          <div class="iradio_minimal-purple">
+            <input type="radio" name="iCheck" id="minimal-radio-mao">
+          </div>
+          <label for="minimal-radio-mao">猫</label></li>
+        <li>
+          <div class="iradio_minimal-purple">
+            <input type="radio" name="iCheck" id="minimal-radio-gou" checked>
+          </div>
+          <label for="minimal-radio-gou">狗</label></li>
+        <li>
+          <div class="iradio_minimal-purple">
+            <input type="radio" name="iCheck" id="minimal-radio-maogou" checked>
+          </div>
+          <label for="minimal-radio-maogou">猫狗</label></li>
+        <li>
+          <div class="iradio_minimal-purple">
+            <input type="radio" name="iCheck" id="minimal-radio-qitachoongwu" checked>
+          </div>
+          <label for="minimal-radio-qitachoongwu">其他</label></li>
+        <li>
+          <div class="iradio_minimal-purple">
+            <input type="radio" name="iCheck" id="minimal-radio-wuchognwu" checked>
+          </div>
+          <label for="minimal-radio-wuchognwu">无</label></li>
+      </ul>
+    </div>
+    <br>
+
+
+    <label>月收入情况：</label>
+    <div id="wordStatuslist6" style="padding:10px; font-size:14px; ">
+      <ul>
+        <li>
+          <div class="iradio_minimal-purple">
+            <input type="radio" name="iCheck" id="minimal-radio-3000">
+          </div>
+          <label for="minimal-radio-mao">小于3千</label></li>
+        <li>
+          <div class="iradio_minimal-purple">
+            <input type="radio" name="iCheck" id="minimal-radio-3000-6000" checked>
+          </div>
+          <label for="minimal-radio-gou">3千~6千</label></li>
+        <li>
+          <div class="iradio_minimal-purple">
+            <input type="radio" name="iCheck" id="minimal-radio-6000-10000" checked>
+          </div>
+          <label for="minimal-radio-maogou">6千~1万</label></li>
+        <li>
+          <div class="iradio_minimal-purple">
+            <input type="radio" name="iCheck" id="minimal-radio-10000" checked>
+          </div>
+          <label for="minimal-radio-qitachoongwu">大于1万</label></li>
+      </ul>
+    </div>
+    <br>
+
+
     <label></label>
     <input type="checkbox" id="register_checkbox">
     <span>我已经认真阅读并同意<a>《用户注册协议》</a></span>
@@ -101,15 +302,6 @@
   </div>
 </div>
 
-
-<!-- copyright -->
-<!--<div class="copyright">-->
-<!--  <div class="container">-->
-<!--    <p>Copyright &copy; 2019.Company name All rights reserved.<a target="_blank" href=""></a>-->
-<!--    </p>-->
-<!--  </div>-->
-<!--</div>-->
-<!-- //copyright -->
 <script src="js/SmoothScroll.min.js"></script>
 <script type="text/javascript" src="js/move-top.js"></script>
 <script type="text/javascript" src="js/easing.js"></script>
@@ -132,4 +324,27 @@
 <!-- //here ends scrolling icon -->
 <script type="text/javascript" src="js/register.js"></script>
 </body>
+
+<!--单选框和复选框的js-->
+<script>
+  $(document).ready(function () {
+    $('input').iCheck({
+      checkboxClass: 'icheckbox_square-red',
+      radioClass: 'iradio_square-red',
+      increaseArea: '20%' // optional
+    });
+  });
+</script>
+
+<!--引入toast的js-->
+<script src="js/toast.js"></script>
+<script>
+  $('#register_btn').click(function () {
+    showMessage('请输入完整的信息！',
+      3000,
+      true,
+      'bounceInUp-hastrans',
+      'bounceOutDown-hastrans');
+  })
+</script>
 
