--- a/good.html
+++ b/good.html
@@ -30,6 +30,7 @@
   <link href='http://fonts.googleapis.com/css?family=Roboto+Condensed:400,700italic,700,400italic,300italic,300'
         rel='stylesheet' type='text/css'>
   <!-- //font -->
+  <script type="text/javascript" src="js/cookie.js"></script>
   <script src="js/jquery-1.11.1.min.js"></script>
   <script src="js/bootstrap.js"></script>
   <script type="text/javascript">
@@ -52,6 +53,7 @@
 
   <!--  引入good的nav样式-->
   <link rel="stylesheet" href="css/goodnav.css">
+
 
 
 </head>
@@ -155,7 +157,7 @@
 <!--aside-->
 <div id="aside">
   <div class="container">
-    <div class="hc_lnav jslist">
+    <div class="hc_lnav  jslist">
       <div class="allbtn">
         <h2><a href="#"><strong>&nbsp;</strong>全部商品分类<i>&nbsp;</i></a></h2>
         <ul style="width:190px" class="jspop box">
@@ -764,3 +766,5 @@
 <script src="js/login.js"></script>
 <!--  引入navbar-->
 <script src="js/my_scrollbar.js"></script>
+<!--引入good的js-->
+<script src="js/good.js"></script>
