--- a/single.html
+++ b/single.html
@@ -32,6 +32,7 @@
   <link href='http://fonts.googleapis.com/css?family=Roboto+Condensed:400,700italic,700,400italic,300italic,300'
         rel='stylesheet' type='text/css'>
   <!-- //font -->
+  <script type="text/javascript" src="js/cookie.js"></script>
   <script src="js/jquery-1.11.1.min.js"></script>
   <script src="js/bootstrap.js"></script>
   <script type="text/javascript">
