--- a/detail.html
+++ b/detail.html
@@ -167,22 +167,13 @@
       <div class="exzoom" id="exzoom">
         <!--大图区域-->
         <div class="exzoom_img_box">
-          <ul class='exzoom_img_ul'>
+          <ul class='exzoom_img_ul' id="exzoomImgLi">
             <li><img
               src="http://img-new.boqiicdn.com/Data/Shop/0/14/1445/shoppicpath11540870855_y.jpg?imageView2/2/w/360/h/360/q/100/interlace/0"/>
             </li>
-            <li><img
-              src="http://img-new.boqiicdn.com/Data/Shop/0/14/1445/shoppicpath21536221602_y.jpg?imageView2/2/w/360/h/360/q/100/interlace/0"/>
-            </li>
-            <li><img
-              src="http://img-new.boqiicdn.com/Data/Shop/0/14/1445/shoppicpath31536221602_y.jpg?imageView2/2/w/360/h/360/q/100/interlace/0"/>
-            </li>
-            <li><img
-              src="http://img-new.boqiicdn.com/Data/Shop/0/14/1445/shoppicpath41536221603_y.jpg?imageView2/2/w/360/h/360/q/100/interlace/0"/>
-            </li>
-            <li><img
-              src="http://img-new.boqiicdn.com/Data/Shop/0/14/1445/shoppicpath51536221603_y.jpg?imageView2/2/w/360/h/360/q/100/interlace/0"/>
-            </li>
+<!--            <li><img-->
+<!--              src="http://img-new.boqiicdn.com/Data/Shop/0/14/1445/shoppicpath21536221602_y.jpg?imageView2/2/w/360/h/360/q/100/interlace/0"/>-->
+<!--            </li>-->
           </ul>
         </div>
         <!--缩略图导航-->
@@ -197,15 +188,13 @@
       <!--放大镜的右边模块-->
       <div id="details_info">
         <div id="details_info_title">
-          福来恩 犬猫灭蜱虫跳蚤喷剂250ml 猫狗体外驱虫药
         </div>
         <div id="details_info_price">
-          <span>￥</span>12321.00
         </div>
         <div id="details_info_other">
           <ul>
             <li>
-              <p>规格<span>2 匹</span></p>
+              <p>规格<span id="specification">2 匹</span></p>
               <br>
               <h5>数量</h5>
               <button class="cutnum">-</button>
@@ -227,8 +216,6 @@
         <h4>商品详情</h4>
       </div>
       <div id="details_body_imgbody_body">
-        <img src="images/1.jpg"/>
-        <img src="images/1.jpg"/>
       </div>
     </div>
 
