--- a/shopcart.html
+++ b/shopcart.html
@@ -168,19 +168,11 @@
           <li>操作</li>
         </ul>
       </div>
-      <!--      <div id="shop_cart_body_list_body">-->
-      <!--        <span>平台全场活动</span>-->
-      <!--        <span>活动</span>-->
-      <!--        请选择平台活动-->
-      <!--      </div>-->
 
       <div id="shop_cart_body_lists">
         <div class="shop_cart_body_list_content">
-<!--          <h4>-->
-<!--            一家店-->
-<!--          </h4>-->
           <div id="shop_cart_body_list_content_list">
-            <ul>
+            <ul id="shop_cart_body_list_content_list_ul">
               <li>
                 <input type="checkbox" class="good_check"/>
                 <img src="http://img-new.boqiicdn.com/Data/Shop/0/14/1445/shoppicpath11540870855_y.jpg?imageView2/2/w/375/h/375/q/100/interlace/0"/>
@@ -190,13 +182,7 @@
                 <p>350g</p>
                 <p>￥3.8</p>
                 <span class="one_span">
-<!--                  <i-button type="ghost" class="cutnum" value="">-</i-button>-->
                   									<button class="cutnum">-</button>
-<!--                  <script>-->
-<!--                    new Vue({-->
-<!--                      el: '#shop_cart_body_list_content_list'-->
-<!--                    })-->
-<!--                  </script>-->
 									<input type='text' class="number" value='1'>
 									</input>
 									<button class="addnum">+</button>
@@ -206,44 +192,11 @@
 								</span>
                 <span class="del_li">删除</span>
               </li>
+
+
             </ul>
           </div>
         </div>
-
-<!--        <div class="shop_cart_body_list_content">-->
-<!--          <h4>-->
-<!--            一家店-->
-<!--          </h4>-->
-<!--          <div id="shop_cart_body_list_content_list">-->
-<!--            <ul>-->
-<!--              <li>-->
-<!--                <input type="checkbox" class="good_check"/>-->
-<!--                <img src="img/list-page/gl1.jpg"/>-->
-<!--                <p>-->
-<!--                  仅售上海 格力(GREE) 2匹变频 金贝 立柜式家用冷暖空调KFR-50LW/(50578)FNhAd-A1 皓雪白(WIFI)-->
-<!--                </p>-->
-<!--                <p>正1匹</p>-->
-<!--                <p>￥12</p>-->
-<!--                <span class="one_span">-->
-<!--&lt;!&ndash;                  <i-button type="ghost" class="cutnum" value="">-</i-button>&ndash;&gt;-->
-<!--                  									<button class="cutnum">-</button>-->
-<!--                  &lt;!&ndash;                  <script>&ndash;&gt;-->
-<!--                  &lt;!&ndash;                    new Vue({&ndash;&gt;-->
-<!--                  &lt;!&ndash;                      el: '#shop_cart_body_list_content_list'&ndash;&gt;-->
-<!--                  &lt;!&ndash;                    })&ndash;&gt;-->
-<!--                  &lt;!&ndash;                  </script>&ndash;&gt;-->
-<!--									<input type='text' class="number" value='1'>-->
-<!--									</input>-->
-<!--									<button class="addnum">+</button>-->
-<!--								</span>-->
-<!--                <span class="good_total">-->
-<!--									￥12-->
-<!--								</span>-->
-<!--                <span class="del_li">删除</span>-->
-<!--              </li>-->
-<!--            </ul>-->
-<!--          </div>-->
-<!--        </div>-->
       </div>
 
     </div>
